k8s/eks/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3000
